# dbt-airflow-snowflake-project

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: dbt_pipeline.py
airflow/dags/utils/: dbt_logger.py  telegram_notify.py
dbt_core/: dbt_project.yml  profiles.yml
dbt_core/models/: sources.yml
dbt_core/models/business_vault/: eff_customer_order.sql  pit_order.sql  sat_customer_master_manual.sql  sat_order_metrics.sql
dbt_core/models/marts/: dim_customers.sql  dim_date.sql  dim_orders_details.sql  fct_orders.sql
dbt_core/models/raw_vault/hubs/customer/: hub_customer.sql
dbt_core/models/raw_vault/hubs/order/: hub_order.sql
dbt_core/models/raw_vault/links/: link_order_customer.sql  link_order_lineitem.sql
dbt_core/models/raw_vault/satellites/customer/: sat_customer_invar.sql  sat_customer_var.sql
dbt_core/models/raw_vault/satellites/order/: sat_order_details.sql  sat_order_status.sql
dbt_core/models/stage/customer/: stg_customer.sql
dbt_core/models/stage/lineitem/: stg_lineitem.sql
dbt_core/models/stage/order/: stg_orders.sql
dbt_core/seeds/: manual_customer_segments.csv
