[project]
name = "dbt-airflow-snowflake-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt-snowflake>=1.10.6",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "sqlfluff>=3.5.0",
    "sqlfluff-templater-dbt>=3.5.0",
]
